cmake_minimum_required(VERSION 3.14)

project(isc105 C)

set(CMAKE_C_STANDARD 99)

include_directories(includes)
add_executable(mainFuncionCuadratica Tema1Funciones/mainFuncionCuadratica.c Tema1Funciones/funcioncuadratica.c Tema1Funciones/funcioncuadratica.h)
add_executable(minunitCuadratica Tema1Funciones/minunitCuadratica.c Tema1Funciones/funcioncuadratica.c Tema1Funciones/funcioncuadratica.h)
add_executable(mainCantVariable Tema1Funciones/cantidad_variable_argumentos/mainCantVariable.c Tema1Funciones/cantidad_variable_argumentos/libreriaCantVar.c Tema1Funciones/cantidad_variable_argumentos/libreriaCantVar.h)
add_executable(minunitCantVariable Tema1Funciones/cantidad_variable_argumentos/minunitCantVariable.c Tema1Funciones/cantidad_variable_argumentos/libreriaCantVar.c Tema1Funciones/cantidad_variable_argumentos/libreriaCantVar.h)