cmake_minimum_required(VERSION 3.14)

project(isc105 C)

set(CMAKE_C_STANDARD 99)

include_directories(includes)
add_executable(mainFuncionCuadratica Tema1Funciones/ejemplo_minunit/mainFuncionCuadratica.c Tema1Funciones/ejemplo_minunit/funcioncuadratica.c Tema1Funciones/ejemplo_minunit/funcioncuadratica.h)
add_executable(minunitCuadratica Tema1Funciones/ejemplo_minunit/minunitCuadratica.c Tema1Funciones/ejemplo_minunit/funcioncuadratica.c Tema1Funciones/ejemplo_minunit/funcioncuadratica.h)
add_executable(mainCantVariable Tema1Funciones/cantidad_variable_argumentos/mainCantVariable.c Tema1Funciones/cantidad_variable_argumentos/libreriaCantVar.c Tema1Funciones/cantidad_variable_argumentos/libreriaCantVar.h)
add_executable(minunitCantVariable Tema1Funciones/cantidad_variable_argumentos/minunitCantVariable.c Tema1Funciones/cantidad_variable_argumentos/libreriaCantVar.c Tema1Funciones/cantidad_variable_argumentos/libreriaCantVar.h)
add_executable(main_EjemploSubProyecto EjemploSubProyectoLibPropias/main_EjemploSubProyecto.c EjemploSubProyectoLibPropias/matematicas.c EjemploSubProyectoLibPropias/matematicas.h)
add_executable(minunit_EjemploSubProyecto EjemploSubProyectoLibPropias/minunit_EjemploSubProyecto.c EjemploSubProyectoLibPropias/matematicas.c EjemploSubProyectoLibPropias/matematicas.h)
add_executable(mainTema2ArregloMulti Tema2ArreglosMultidimensionales/mainTema2ArregloMulti.c Tema2ArreglosMultidimensionales/libreria_arreglos.c Tema2ArreglosMultidimensionales/libreria_arreglos.h)