cmake_minimum_required(VERSION 3.14)

project(isc105 C)

set(CMAKE_C_STANDARD 99)

include_directories(includes)
add_executable(mainFuncionCuadratica Tema1Funciones/ejemplo_minunit/mainFuncionCuadratica.c Tema1Funciones/ejemplo_minunit/funcioncuadratica.c Tema1Funciones/ejemplo_minunit/funcioncuadratica.h)
add_executable(minunitCuadratica Tema1Funciones/ejemplo_minunit/minunitCuadratica.c Tema1Funciones/ejemplo_minunit/funcioncuadratica.c Tema1Funciones/ejemplo_minunit/funcioncuadratica.h)
add_executable(mainCantVariable Tema1Funciones/cantidad_variable_argumentos/mainCantVariable.c Tema1Funciones/cantidad_variable_argumentos/libreriaCantVar.c Tema1Funciones/cantidad_variable_argumentos/libreriaCantVar.h)
add_executable(minunitCantVariable Tema1Funciones/cantidad_variable_argumentos/minunitCantVariable.c Tema1Funciones/cantidad_variable_argumentos/libreriaCantVar.c Tema1Funciones/cantidad_variable_argumentos/libreriaCantVar.h)
add_executable(main_EjemploSubProyecto EjemploSubProyectoLibPropias/main_EjemploSubProyecto.c EjemploSubProyectoLibPropias/matematicas.c EjemploSubProyectoLibPropias/matematicas.h)
add_executable(minunit_EjemploSubProyecto EjemploSubProyectoLibPropias/minunit_EjemploSubProyecto.c EjemploSubProyectoLibPropias/matematicas.c EjemploSubProyectoLibPropias/matematicas.h)
add_executable(mainTema2ArregloMulti Tema2ArreglosMultidimensionales/mainTema2ArregloMulti.c Tema2ArreglosMultidimensionales/libreria_arreglos.c Tema2ArreglosMultidimensionales/libreria_arreglos.h)
add_executable(mainisc205 isc-205/mainisc205.c)
add_executable(MainMinunit EjemploMinUnit/MainMinunit.c EjemploMinUnit/Primo.c EjemploMinUnit/Primo.h)
add_executable(MainPrograma EjemploMinUnit/MainPrograma.c EjemploMinUnit/Primo.c EjemploMinUnit/Primo.h)
add_executable(minunit_Estructura Tema3EstructurasUniones/minunit_Estructura.c Tema3EstructurasUniones/libreriaEstructura.c Tema3EstructurasUniones/libreriaEstructura.h Tema3EstructurasUniones/libreriaUnion.c Tema3EstructurasUniones/libreriaUnion.h)
add_executable(main_Estructura Tema3EstructurasUniones/main_Estructura.c Tema3EstructurasUniones/libreriaEstructura.c Tema3EstructurasUniones/libreriaEstructura.h Tema3EstructurasUniones/libreriaStdioEstructura.c Tema3EstructurasUniones/libreriaStdioEstructura.h Tema3EstructurasUniones/libreriaUnion.c Tema3EstructurasUniones/libreriaUnion.h)
add_executable(minunitOrdenamiento Ordenamiento/minunitOrdenamiento.c Ordenamiento/libreriaOrdenamiento.c Ordenamiento/libreriaOrdenamiento.h)
add_executable(mainOrdenamiento Ordenamiento/mainOrdenamiento.c Ordenamiento/libreriaOrdenamiento.c Ordenamiento/libreriaOrdenamiento.h)
add_executable(PunteroMain Tema4Punteros/PunteroMain.c Tema4Punteros/libreriaPuntero.c Tema4Punteros/libreriaPuntero.h)
add_executable(PunteroMinunit Tema4Punteros/PunteroMinunit.c Tema4Punteros/libreriaPuntero.c Tema4Punteros/libreriaPuntero.h)
add_executable(memoriaDinamicaMinUnit Tema5MemoriaDinamica/memoriaDinamicaMinUnit.c Tema5MemoriaDinamica/perroio.c Tema5MemoriaDinamica/perroio.h Tema5MemoriaDinamica/perrodinamico.c Tema5MemoriaDinamica/perrodinamico.h Tema4Punteros/libreriaPuntero.c Tema4Punteros/libreriaPuntero.h)
add_executable(minUnitCadenas Tema6CadenaDeCaracteres/minUnitCadenas.c Tema6CadenaDeCaracteres/htmlExtraer.c Tema6CadenaDeCaracteres/htmlExtraer.h)